--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-openai==2.15.0
-python-dotenv==1.0.1
 fastapi==0.110.0
-uvicorn==0.29.0
+uvicorn[standard]==0.27.1
+openai==1.12.0
+pydantic==2.6.1
+python-dotenv==1.0.1
