--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-fastapi==0.110.0
+fastapi==0.109.2
 uvicorn[standard]==0.27.1
-openai==1.12.0
-pydantic==2.6.1
+openai==1.10.0
+pydantic==2.5.3
+httpx==0.27.0
 python-dotenv==1.0.1
